<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>irb1100_egm_descritpion</name>
  <version>0.1.0</version>
  <description>
    Provides a ROS node example implementation, which provides a ROS service
    for getting a manually specified description of a ABB robot controller
    setup with a irb1100 robot.
  </description>
  <maintainer email="jon.tjerngren@se.abb.com">Jon Tjerngren</maintainer>
  <license>BSD-3-Clause</license>
  <author>Jon Tjerngren</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>abb_egm_rws_managers</depend>
  <depend>abb_robot_msgs</depend>
  <depend>angles</depend>
  <depend>roscpp</depend>
</package>
